changed event-listener to onclick

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </center>
 
         <p>Total Donated Currency: $<span id="counter"></span></p>
-        <button id="donate">Donate</button>
+        <button onclick="donate_money()">Donate</button>
         <p id="thanks"></p>
 
         <br>
