--- a/the-brothers.html
+++ b/the-brothers.html
@@ -36,7 +36,7 @@
             <br>
             <br>
 
-            <a href="index.html">Go Back</a>
+            <a href="church-landing.html">Go Back</a>
 
             <br>
             <br>
